@@ -6,8 +6,9 @@ What's new in PinMAME:
 Version 3.7 (XX XXth, 2025) - ""
 ------------------------------------------------------------------------------
 
-*** ROM SUPPORT *** Thanks to Tom Collins
+*** ROM SUPPORT *** Thanks to Tom Collins, Paul Swan
 Clones:
+Soccer Kings (alternate set 2)
 Victory (1.1 multiplayer MOD), (1.2 multiplayer MOD)
 
 
